project/k8s/20-worker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlb-worker
  namespace: dlb
spec:
  selector:
    app: dlb-worker
  ports:
    - name: http
      port: 80
      targetPort: http
