project/k8s/41-envoy-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlb-envoy
  namespace: dlb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dlb-envoy
  template:
    metadata:
      labels:
        app: dlb-envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.30.1
          imagePullPolicy: IfNotPresent
          args:
            - "-c"
            - "/etc/envoy/envoy.yaml"
            - "--service-node"
            - "dlb-envoy"
            - "--service-cluster"
            - "dlb"
          ports:
            - name: http
              containerPort: 8080
            - name: admin
              containerPort: 9901
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
      volumes:
        - name: envoy-config
          configMap:
            name: dlb-envoy-config
