project/k8s/45-envoy-config-ring-hash.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dlb-envoy-config
  namespace: dlb
data:
  envoy.yaml: |
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901
    static_resources:
      listeners:
        - name: listener_http
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: dlb_service
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route: { cluster: dlb_worker }
                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
      clusters:
        - name: dlb_worker
          type: STRICT_DNS
          connect_timeout: 1s
          lb_policy: RING_HASH
          load_assignment:
            cluster_name: dlb_worker
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: dlb-worker.dlb.svc.cluster.local
                          port_value: 80
